# openfhe-development

./: CMakeLists.txt  setup_rvv.sh
example/: CMakeLists.txt  sampling.cpp
example/common/: common.h  crt.S  syscalls.c
src/core/include/utils/: exception.h
src/core/lib/utils/blockAllocator/: xallocator.cpp
user/: CMakeLists.txt
